preparation for final submission